--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,5 +22,6 @@ html(ng-app="CMDBapp")
     script(src='client/controllers/loginController.js')    
     script(src='client/controllers/cmdbController.js')  
     script(src='client/controllers/graphController.js') 
-    script(src='client/controllers/queryController.js')            
+    script(src='client/controllers/queryController.js') 
+    script(src="client/controllers/visController.js")           
     script(src='/javascripts/global.js')
