--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -139,6 +139,12 @@ a
     width: 980px;
     height: 800px;
     border: 1px solid lightgray;
+    background-color: #F2F2F2;
+    /*+border-radius: 24px;*/
+    -moz-border-radius: 24px;
+    -webkit-border-radius: 24px;
+    -khtml-border-radius: 24px;
+    border-radius: 24px;
 }
 .navlogo
 {
