--- a/views/partials/graph.jade
+++ b/views/partials/graph.jade
@@ -1,5 +1,4 @@
-link(rel='stylesheet', href='bower_components/vis/dist/vis.css')
-script(src='bower_components/vis/dist/vis.js')
+script(src='client/controllers/network_config.js')
 .container
   .container-fluid  
     .row
@@ -34,7 +33,7 @@ script(src='bower_components/vis/dist/vis.js')
                 li
                   a(href='#') About
 .panel.panel-default
-  .panel-heading
+  #header.panel-heading
     h5 {{ heading }}
   .panel-body
     .panel-1
@@ -48,7 +47,7 @@ script(src='bower_components/vis/dist/vis.js')
             input.form-control(type='search', placeholder='type to filter', ng-model="thefilter")
           span
           .button-group(role="group")
-            .button.btn.btn-default(type="button", aria-label='Toogle Full Screen')
+            .button.btn.btn-default(type="button", ng-click="togglefullscreen()", aria-label='Toggle Full Screen')
               span.glyphicon.glyphicon-fullscreen(aria-hidden = true)
             .button.btn.btn-default(type="button", aria-label='Fit Screen')
               span.glyphicon.glyphicon-screenshot(aria-hidden = true)
@@ -58,7 +57,7 @@ script(src='bower_components/vis/dist/vis.js')
               span.glyphicon.glyphicon-zoom-in(aria-hidden = true)
             .button.btn.btn-default(type="button", aria-label='Zoom Out')
               span.glyphicon.glyphicon-zoom-out(aria-hidden = true)
-          aspn
+          span
           .button-group(role="group")
             .button.btn.btn-default(type="button", aria-label='Move Up')
               span.glyphicon.glyphicon-arrow-up(aria-hidden = true)
@@ -70,7 +69,6 @@ script(src='bower_components/vis/dist/vis.js')
               span.glyphicon.glyphicon-arrow-down(aria-hidden = true)
         span
         #configurator
-          h4 Configure Graph
     .panel-2.hidden
       form.form-filter
         h3 {{title}}
@@ -100,7 +98,7 @@ script(src='bower_components/vis/dist/vis.js')
           td {{ r.SourceInfo.ClassId}}
           td {{ r.DestinationInfo.Name }}
           td {{ r.DestinationInfo.ClassId}}
-  .panel-footer
+  #footer.panel-footer
     h5 Footer - {{ footermessage }}
 #ExportModal.modal.fade(tabindex="-1", role="dialog", aria-labelledby="MyModalLabel")
   .modal-dialog(role="document")
