add graph filtering classes and relationships

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,23 +4,24 @@ html(ng-app="CMDBapp")
     title= title
     link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap-theme.css')
     link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.css')
+    link(rel='stylesheet', href='bower_components/bootstrap-toggle/css/bootstrap-toggle.css')
     link(rel='stylesheet', href='bower_components/angular-loading-bar/build/loading-bar.css') 
     link(rel='stylesheet', href='bower_components/angular-ui/build/angular-ui.css')
     link(rel='stylesheet', href='bower_components/vis/dist/vis.css') 
     link(rel='stylesheet', href='/stylesheets/style.css') 
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
-    script(src='bower_components/bootstrap/dist/js/bootstrap.js')
-    script(src='bower_components/vis/dist/vis.js')          
+    script(src='bower_components/jquery/dist/jquery.min.js')
+    script(src='bower_components/bootstrap/dist/js/bootstrap.min.js')       
+    script(src='bower_components/vis/dist/vis.min.js')          
   body(ng-cloak)
     block content
-    script(src='bower_components/underscore/underscore.js')
-    script(src='bower_components/angular/angular.js')
-    script(src='bower_components/angular-route/angular-route.js')
-    script(src='bower_components/angular-resource/angular-resource.js')
+    script(src='bower_components/underscore/underscore-min.js')
+    script(src='bower_components/angular/angular.min.js')
+    script(src='bower_components/angular-route/angular-route.min.js')
+    script(src='bower_components/angular-resource/angular-resource.min.js')
     script(src='bower_components/angular-toArrayFilter/toArrayFilter.js')
-    script(src='bower_components/angular-loading-bar/build/loading-bar.js')
-    script(src='bower_components/angular-sanitize/angular-sanitize.js')
-    script(src='bower_components/ng-csv/build/ng-csv.js')
+    script(src='bower_components/angular-loading-bar/build/loading-bar.min.js')
+    script(src='bower_components/angular-sanitize/angular-sanitize.min.js')
+    script(src='bower_components/ng-csv/build/ng-csv.min.js')
     script(src='client/controllers/CMDBapp.js')
     script(src='client/controllers/loginController.js')    
     script(src='client/controllers/cmdbController.js')  
