--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,11 @@
     padding: 15px;
     margin: 0 auto;
 }
+.filter-class
+{
+    font-size: small;
+    line-height: 1.7;
+}
 .modal-graph
 {
     /*+placement: -110px -22px;*/
