cleaning and optimization

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,22 +9,23 @@ html(ng-app="CMDBapp")
     link(rel='stylesheet', href='bower_components/angular-ui/build/angular-ui.css')
     link(rel='stylesheet', href='bower_components/vis/dist/vis.css') 
     link(rel='stylesheet', href='/stylesheets/style.css') 
-    script(src='bower_components/jquery/dist/jquery.min.js')
-    script(src='bower_components/bootstrap/dist/js/bootstrap.min.js')       
-    script(src='bower_components/vis/dist/vis.min.js')          
+    script(src='bower_components/jquery/dist/jquery.js')
+    script(src='bower_components/bootstrap/dist/js/bootstrap.js')       
+    script(src='bower_components/vis/dist/vis.js')          
   body(ng-cloak)
     block content
-    script(src='bower_components/underscore/underscore-min.js')
-    script(src='bower_components/angular/angular.min.js')
-    script(src='bower_components/angular-route/angular-route.min.js')
-    script(src='bower_components/angular-resource/angular-resource.min.js')
+    script(src='bower_components/underscore/underscore.js')
+    script(src='bower_components/angular/angular.js')
+    script(src='bower_components/angular-route/angular-route.js')
+    script(src='bower_components/angular-resource/angular-resource.js')
     script(src='bower_components/angular-toArrayFilter/toArrayFilter.js')
-    script(src='bower_components/angular-loading-bar/build/loading-bar.min.js')
-    script(src='bower_components/angular-sanitize/angular-sanitize.min.js')
-    script(src='bower_components/ng-csv/build/ng-csv.min.js')
+    script(src='bower_components/angular-loading-bar/build/loading-bar.js')
+    script(src='bower_components/angular-sanitize/angular-sanitize.js')
+    script(src='bower_components/ng-csv/build/ng-csv.js')
     script(src='client/controllers/CMDBapp.js')
     script(src='client/controllers/loginController.js')    
     script(src='client/controllers/cmdbController.js')  
     script(src='client/controllers/graphController.js') 
     script(src='client/controllers/queryController.js')          
     script(src='/javascripts/global.js')
+    script(src='/config.cfg')
