--- a/views/partials/cmdb.jade
+++ b/views/partials/cmdb.jade
@@ -27,7 +27,7 @@
                   a(href='#') Disconnect
                 li.divider
                 li
-                  a(href='#') Preferences
+                  a(href='#/prefs') Preferences
                 li.divider
                 li
                   a(href='#') About
