--- a/views/partials/details.jade
+++ b/views/partials/details.jade
@@ -35,7 +35,7 @@
                   a(href='#') Disconnect
                 li.divider
                 li
-                  a(href='#') Preferences
+                  a(href='#/prefs') Preferences
                 li.divider
                 li
                   a(href='#') About
