--- a/views/partials/graph.jade
+++ b/views/partials/graph.jade
@@ -28,7 +28,7 @@ script(src='client/config/network_config.js')
                   a(href='#') Disconnect
                 li.divider
                 li
-                  a(href='#') Preferences
+                  a(href='#/prefs') Preferences
                 li.divider
                 li
                   a(href='#') About
@@ -125,7 +125,7 @@ script(src='client/config/network_config.js')
         #myoldnetwork
       .modal-footer
           button.btn.btn-default(data-dismiss="modal") Close
-#MyModal.modal.fade(tabindex="-1", role="dialog", aria-labelledby="MyModalLabel")
+#DetailsModal.modal.fade(tabindex="-1", role="dialog", aria-labelledby="MyModalLabel")
   .modal-dialog(role="document")
     .modal-content
       .modal-header
