--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,7 @@ html(ng-app="CMDBapp")
     script(src='bower_components/angular/angular.js')
     script(src='bower_components/angular-route/angular-route.js')
     script(src='bower_components/angular-resource/angular-resource.js')
+    script(src='bower_components/angular-cookies/angular-cookies.js')
     script(src='bower_components/angular-toArrayFilter/toArrayFilter.js')
     script(src='bower_components/angular-loading-bar/build/loading-bar.js')
     script(src='bower_components/angular-sanitize/angular-sanitize.js')
