--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,6 @@ html(ng-app="CMDBapp")
     title= title
     link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap-theme.css')
     link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.css')
-    link(rel='stylesheet', href='bower_components/bootstrap-toggle/css/bootstrap-toggle.css')
     link(rel='stylesheet', href='bower_components/angular-loading-bar/build/loading-bar.css') 
     link(rel='stylesheet', href='bower_components/angular-ui/build/angular-ui.css')
     link(rel='stylesheet', href='bower_components/vis/dist/vis.css') 
@@ -23,10 +22,12 @@ html(ng-app="CMDBapp")
     script(src='bower_components/angular-loading-bar/build/loading-bar.js')
     script(src='bower_components/angular-sanitize/angular-sanitize.js')
     script(src='bower_components/ng-csv/build/ng-csv.js')
+    script(src='https://cdn.jsdelivr.net/ngstorage/0.3.6/ngStorage.min.js')
     script(src='client/controllers/CMDBapp.js')
     script(src='client/controllers/loginController.js')    
     script(src='client/controllers/cmdbController.js')  
     script(src='client/controllers/graphController.js') 
-    script(src='client/controllers/queryController.js')          
+    script(src='client/controllers/queryController.js')  
+    script(src='client/controllers/userController.js')         
     script(src='/javascripts/global.js')
     script(src='/config.cfg')
