--- a/views/partials/details.jade
+++ b/views/partials/details.jade
@@ -30,7 +30,7 @@
                 b.caret
               ul.dropdown-menu.dropdown-menu-right
                 li
-                  a(href='#') Info
+                  a(href='#/user') Info
                 li
                   a(href='#') Disconnect
                 li.divider
