--- a/views/partials/graph.jade
+++ b/views/partials/graph.jade
@@ -23,7 +23,7 @@ script(src='client/config/network_config.js')
                 b.caret
               ul.dropdown-menu.dropdown-menu-right
                 li
-                  a(href='#') Info
+                  a(href='#/user') Info
                 li
                   a(href='#') Disconnect
                 li.divider
