graph method revised

--- a/views/partials/graph.jade
+++ b/views/partials/graph.jade
@@ -1,5 +1,5 @@
 script(src='client/config/network_config.js')
-.container
+.container(ng-init="initGraph()")
   .container-fluid  
     .row
       nav.navbar.navbar-default(role='navigation')
