manage user deconnection

--- a/views/partials/graph.jade
+++ b/views/partials/graph.jade
@@ -25,7 +25,7 @@ script(src='client/config/network_config.js')
                 li
                   a(href='#/user') Info
                 li
-                  a(href='#') Disconnect
+                  a(ng-click="Logout()", type="submit") Disconnect
                 li.divider
                 li
                   a(href='#/prefs') Preferences
