--- a/views/partials/query.jade
+++ b/views/partials/query.jade
@@ -14,7 +14,7 @@
                 li
                   a(href='#/user') Info
                 li
-                  a(href='#') Disconnect
+                  a(ng-click="Logout()", type="submit") Disconnect
                 li.divider
                 li
                   a(href='#/prefs') Preferences
