--- a/views/partials/details.jade
+++ b/views/partials/details.jade
@@ -32,7 +32,7 @@
                 li
                   a(href='#/user') Info
                 li
-                  a(href='#') Disconnect
+                  a(ng-click="Logout()", type="submit") Disconnect
                 li.divider
                 li
                   a(href='#/prefs') Preferences
