--- a/views/partials/user.jade
+++ b/views/partials/user.jade
@@ -17,7 +17,7 @@ container
                 li
                   a(href='#/user') Info
                 li
-                  a(href='#') Disconnect
+                  a(ng-click="Logout()", type="submit") Disconnect
                 li.divider
                 li
                   a(href='#/prefs') Preferences
