reduce level when nb relation high

--- a/views/partials/login.jade
+++ b/views/partials/login.jade
@@ -3,7 +3,7 @@ block content
         .col-sm-6.col-md-4.col-md-offset-4
             h1.text-center.login-title Sign In to enter CMDB Test API
             div.account-wall
-                img.profile-img(src="images/logo.png")
+                img.profile-img(src="images/TSODev_logo.png")
                 form.form-signin
                 .form-group
                     label.control-label(for='servernane') Server Name
