--- a/views/partials/user.jade
+++ b/views/partials/user.jade
@@ -4,7 +4,7 @@ container
       nav.navbar.navbar-default(role='navigation')
         .navbar-inner
           a.navbar-brand
-            img.navlogo(alt="bmc" src="images/bmc_dna.png")
+            img.navlogo(alt="bmc" src="images/it-service-management.png")
           ul.nav.navbar-nav
             li
               a(ng-click="goHome()",href='#/query') Home
