--- a/views/partials/graph.jade
+++ b/views/partials/graph.jade
@@ -5,7 +5,7 @@ script(src='client/config/network_config.js')
       nav.navbar.navbar-default(role='navigation')
         .navbar-inner
           a.navbar-brand
-            img.navlogo(alt="bmc" src="images/bmc_dna.png")
+            img.navlogo(alt="bmc" src="images/it-service-management.png")
           ul.nav.navbar-nav
             li
               a(ng-click="goHome()",href='#/query') Home
