--- a/views/partials/prefs.jade
+++ b/views/partials/prefs.jade
@@ -60,7 +60,7 @@
               option(value='0') when first non-matching found
               option(value='1') when first matching found
               option(value='2') walk the entire graph
-          .col-md-4
+          .col-md-2
             label.control-label Level
             select.form-control(ng-model="level")
               option(value='1') 1
@@ -68,5 +68,13 @@
               option(value='3') 3
               option(value='4') 4
               option(value='5') 5
+        .row
+          .col-md-6
+            .checkbox
+              label.control-label
+                input.cb(type='checkbox',ng-change="togglemaxrel()", ng-model="statemaxrel")
+                |                              Reduce level when number of relationship is greater than
+          .col-md-2
+            input.form-control(type='number', placeholder='Max relation', value='200', ng-model="maxrel")
     .form-group
     button.btn.btn-primary(ng-click="SavePrefs()", type='submit') Save
