--- a/views/partials/graph.jade
+++ b/views/partials/graph.jade
@@ -31,7 +31,7 @@ script(src='client/config/network_config.js')
                   a(href='#/prefs') Preferences
                 li.divider
                 li
-                  a(href='#') About
+                  a(href='#/About') About
 .panel.panel-default
   #header.panel-heading
     h5 {{ heading }}
