--- a/views/partials/details.jade
+++ b/views/partials/details.jade
@@ -38,7 +38,7 @@
                   a(href='#/prefs') Preferences
                 li.divider
                 li
-                  a(href='#') About
+                  a(href='#/About') About
 .panel.panel-default
   .panel-heading
     h5 {{ heading }}
