--- a/views/partials/user.jade
+++ b/views/partials/user.jade
@@ -23,7 +23,7 @@ container
                   a(href='#/prefs') Preferences
                 li.divider
                 li
-                  a(href='#') About
+                  a(href='#/About') About
 .panel.panel-default
   .panel-heading
     h5 {{ heading }}
