About with version

--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -41,9 +41,10 @@ container
               p
                 | This application is a proove of concept using bmc Atrium CDMB RestAPI to provide graphical results.
               pre.
-                \nversion 0.3 build 145                
+                version {{ version }} build {{ build }}                
               p
                 a.btn.btn-primary(ng-click="QuitAbout()", role='button') Ok
               p by TSODev - November 2015
+              p License : {{ license }}
         .col-md-4
 
