--- a/views/partials/query.jade
+++ b/views/partials/query.jade
@@ -4,7 +4,7 @@
       nav.navbar.navbar-default(role='navigation')
         .navbar-inner
           a.navbar-brand
-            img.navlogo(alt="bmc" src="images/it-service-management.png")
+            img.navlogo(alt="bmc" src="images/TSODev_logo.png")
           ul.nav.navbar-nav.pull-right
             li.dropdown
               a.dropdown-toggle(data-toggle='dropdown')
